--- a/index.html
+++ b/index.html
@@ -9,24 +9,32 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Red+Hat+Text:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Roboto:wght@100;300;500;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Magra:wght@400;700&family=Red+Hat+Text:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Roboto:wght@100;300;500;900&display=swap" rel="stylesheet">
     <title>Travel</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="root">
         <header class="header">
-            <div class="logo">
-                <img src="../Travel/img/Vector.svg" alt="logo">
-                <p class="header-travel">Travel Portal</p>
-            </div>
-            <nav class="header-nav">
-                <ul class="header-list">
-                    <li class="list-item"><a href="#preview" class="nav-link">How It Works</a></li>
-                    <li class="list-item"><a href="#steps" class="nav-link">Plan Your Trip</a></li>
-                    <li class="list-item"><a href="#destinations" class="nav-link">Destinations</a></li>
-                    <li class="list-item"><a href="#stories" class="nav-link">Travel Stories</a></li>
-                </ul>
+            <div class="wrapper">
+                <div class="header-flex">
+                <div class="logo">
+                     <img src="./img/Vector.svg" alt="logo">
+                     <p class="header-travel">Travel Portal</p>
+                </div>
+                <nav class="header-nav">
+                    <ul class="header-list">
+                         <li class="list-item"><a href="#preview" class="nav-link">How It Works</a></li>
+                         <li class="list-item"><a href="#steps" class="nav-link">Plan Your Trip</a></li>
+                        <li class="list-item"><a href="#destinations" class="nav-link">Destinations</a></li>
+                        <li class="list-item"><a href="#stories" class="nav-link">Travel Stories</a></li>
+                    </ul>
+                </nav>
                 <button class="login">Login</button>
-            </nav>   
+            </div>
+            </div>
         </header>
     </div>
 </body>
