feat: add section preview

--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
             </div>
             </div>
         </header>
+        <main class="main">
+            <div class="wrapper">
+                <section class="preview">
+                    <h1 class="preview-h">Explore the beauty of the World</h1>
+                    <p class="preview-p">Receive personalized recommendations for countries, hotels, activities and more</p>
+                    <form class="preview-form" action="action.php">
+                        <input class="form-search" type="search"  placeholder="What would you like to do?" >
+                        <input class="form-button" type="submit"  value="Start Planning" >
+                    </form>
+                </section>
+                </div>
+        </main>
     </div>
 </body>
 </html>
