--- a/index.html
+++ b/index.html
@@ -46,6 +46,29 @@
                         <input class="form-button" type="submit"  value="Start Planning" >
                     </form>
                 </section>
+                <section class="steps">
+                    <h2 class="steps-h">3 STEPS TO THE PERFECT TRIP</h2>
+                    <div class="steps-block">
+                        <div class="steps-item">  
+                            <div class="steps-icon">
+                                <img class="steps-svg"  src="/img/bike.svg" alt="icon">
+                            </div>
+                            <p class="steps-p">Tell us what you want to do</p>
+                        </div> 
+                        <div class="steps-schedule">  
+                            <div class="steps-icon">
+                                <img class="steps-svg" src="/img/schedule.svg" alt="icon">
+                            </div>
+                            <p class="steps-p">Share us preferable dates</p>
+                        </div>
+                        <div class="steps-item">  
+                            <div class="steps-icon">
+                                <img class="steps-svg" src="/img/shoe.svg" alt="icon">
+                            </div>
+                            <p class="steps-p">We will give you recommendations</p>
+                        </div>  
+                    </div>
+                </section>
                 </div>
         </main>
     </div>
