feat: add section destinations

--- a/index.html
+++ b/index.html
@@ -69,6 +69,29 @@
                         </div>  
                     </div>
                 </section>
+                <section class="destinations">
+                    <h2>POPULAR DESTINATIONS</h2>
+                    <div class="dest-block">
+                        <div class="spain">  
+                            <p class="dest-p">SPAIN</p>                      
+                        </div>
+                        <div class="japan">
+                            <p class="dest-p">JAPAN</p>
+                        </div>
+                        <div class="usa">
+                            <p class="dest-p">USA</p>
+                        </div>
+                    </div>
+                    <div class="slider-buttons">
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                    </div>
+                    <button class="find">
+                        <img src="/img/arrow.svg" alt="arrow">
+                        <p>Find More</p>   
+                    </button>
+                </section>
                 </div>
         </main>
     </div>
