--- a/index.html
+++ b/index.html
@@ -92,7 +92,72 @@
                         <p>Find More</p>   
                     </button>
                 </section>
-                </div>
+            </div>
+                <section class="stories">
+                    <div class="stories-wrapper">
+                        <h2>TRAVEL STORIES</h2>
+                        <div class="stories-block">
+                            <div class="stories-item">
+                                <div class="stories-thailand">
+                                </div>
+                                <div class="stories-text">
+                                    <h3>10 Photos of Attractive Thailand</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                                        Excepteur sint occaecat cupidatat non proident, 
+                                        sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, 
+                                        consectetur adipiscing elit... 
+                                        <span>Read More</span></p>
+                                </div>
+                            </div>
+                            <div class="stories-item">
+                                <div class="stories-utah">
+                                </div>
+                                <div class="stories-text">
+                                    <h3>Canyonlands National Park, Utah</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, 
+                                        consectetur adipiscing elit... 
+                                        <span>Read More</span></p>
+                                </div>
+                            </div>
+                            <div class="stories-item">
+                                <div class="stories-mountains">
+                                </div>
+                                <div class="stories-text">
+                                    <h3>I left my heart in the Mountains!</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit... 
+                                        <span>Read More</span></p>
+                                </div>
+                            </div>
+                            <div class="stories-item">
+                                <div class="stories-journey">
+                                </div>
+                                <div class="stories-text">
+                                    <h3>The Longest journey in my life!</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, 
+                                        consectetur adipiscing elit... 
+                                        <span>Read More</span></p>
+                                </div>
+                            </div>
+                        </div>   
+                        <button class="see">
+                            <img src="/img/arrow.svg" alt="arrow" class="see-arrow">
+                            <p>See More</p>
+                        </button>
+                    </div>    
+                </section>
         </main>
     </div>
 </body>
