feat: add footer

--- a/index.html
+++ b/index.html
@@ -159,6 +159,16 @@
                     </div>    
                 </section>
         </main>
+        <footer class="footer">
+                <div class="footer-block">
+                    <p>All Rights Reserved &copy; Travel Portal</p>
+                    <div class="social">
+                        <img src="/img/inst.svg" alt="inst">
+                        <img src="/img/youtube.svg" alt="youtube">
+                        <img src="/img/twitter.svg" alt="twitter">
+                    </div>
+                </div>
+        </footer>
     </div>
 </body>
 </html>
