--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="wrapper">
                 <div class="header-flex">
                 <div class="logo">
-                     <img src="./img/Vector.svg" alt="logo">
+                     <img src="/img/Vector.svg" alt="logo">
                      <p class="header-travel">Travel Portal</p>
                 </div>
                 <nav class="header-nav">
