fix: fix link v2

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Magra:wght@400;700&family=Red+Hat+Text:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Roboto:wght@100;300;500;900&display=swap" rel="stylesheet">
     <title>Travel</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="/img/Vector.svg">
+    <link rel="icon" type="image/x-icon" href="./img/Vector.svg">
 </head>
 <body>
     <div class="root">
@@ -22,7 +22,7 @@
             <div class="wrapper">
                 <div class="header-flex">
                 <div class="logo">
-                     <img src="/img/Vector.svg" alt="logo">
+                     <img src="./img/Vector.svg" alt="logo">
                      <p class="header-travel">Travel Portal</p>
                 </div>
                 <nav class="header-nav">
@@ -52,19 +52,19 @@
                     <div class="steps-block">
                         <div class="steps-item">  
                             <div class="steps-icon">
-                                <img class="steps-svg"  src="/img/bike.svg" alt="icon">
+                                <img class="steps-svg"  src="./img/bike.svg" alt="icon">
                             </div>
                             <p class="steps-p">Tell us what you want to do</p>
                         </div> 
                         <div class="steps-schedule">  
                             <div class="steps-icon">
-                                <img class="steps-svg" src="/img/schedule.svg" alt="icon">
+                                <img class="steps-svg" src="./img/schedule.svg" alt="icon">
                             </div>
                             <p class="steps-p">Share us preferable dates</p>
                         </div>
                         <div class="steps-item">  
                             <div class="steps-icon">
-                                <img class="steps-svg" src="/img/shoe.svg" alt="icon">
+                                <img class="steps-svg" src="./img/shoe.svg" alt="icon">
                             </div>
                             <p class="steps-p">We will give you recommendations</p>
                         </div>  
@@ -89,7 +89,7 @@
                         <div class="circle"></div>
                     </div>
                     <button class="find">
-                        <img src="/img/arrow.svg" alt="arrow">
+                        <img src="./img/arrow.svg" alt="arrow">
                         Find More 
                     </button>
                 </section>
@@ -154,7 +154,7 @@
                             </div>
                         </div>   
                         <button class="see">
-                            <img src="/img/arrow.svg" alt="arrow" class="see-arrow">
+                            <img src="./img/arrow.svg" alt="arrow" class="see-arrow">
                             See More
                         </button>
                     </div>    
@@ -164,9 +164,9 @@
                 <div class="footer-block">
                     <p>All Rights Reserved &copy; Travel Portal</p>
                     <ul class="social">
-                        <li><a href="https://github.com/Biefs" target="_blank"><img class="social-img" src="/img/inst.svg" alt="inst"></a></li>
-                        <li><a href="https://www.youtube.com/c/RollingScopesSchool?app=desktop" target="_blank"><img class="social-img" src="/img/youtube.svg" alt="youtube"></a></li>
-                        <li><a href="https://rs.school/js-stage0/" target="_blank"><img class="social-img" src="/img/twitter.svg" alt="twitter"></a></li>
+                        <li><a href="https://github.com/Biefs" target="_blank"><img class="social-img" src="./img/inst.svg" alt="inst"></a></li>
+                        <li><a href="https://www.youtube.com/c/RollingScopesSchool?app=desktop" target="_blank"><img class="social-img" src="./img/youtube.svg" alt="youtube"></a></li>
+                        <li><a href="https://rs.school/js-stage0/" target="_blank"><img class="social-img" src="./img/twitter.svg" alt="twitter"></a></li>
                     </ul>
                 </div>
         </footer>
